--- a/MicroTwoM/pom.xml
+++ b/MicroTwoM/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>MicroOne</artifactId>
+    <artifactId>MicroTwoM</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>MicroOne</name>
     <description>MicroOne</description>
